build: fix lock checks