@@ -1,6 +1,5 @@
 package io.github.aalsanie.boundedorigin.api;
 
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -10,6 +9,11 @@ public record Operation(String type, Map<String, List<String>> dimensions) {
   public Operation {
     type = requireNonBlank(type, "type");
     dimensions = immutableMultiMap(dimensions);
+  }
+
+  @Override
+  public Map<String, List<String>> dimensions() {
+    return Map.copyOf(dimensions);
   }
 
   private static Map<String, List<String>> immutableMultiMap(Map<String, List<String>> values) {
@@ -22,10 +26,9 @@ public record Operation(String type, Map<String, List<String>> dimensions) {
           if (entries.isEmpty()) {
             throw new IllegalArgumentException("dimension values must not be empty");
           }
-          List<String> entryCopy = List.copyOf(entries);
-          copy.put(validatedKey, entryCopy);
+          copy.put(validatedKey, List.copyOf(entries));
         });
-    return Collections.unmodifiableMap(copy);
+    return Map.copyOf(copy);
   }
 
   private static String requireNonBlank(String value, String label) {
